Fixes ul and ol padding-left alignment.

--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -376,7 +376,7 @@ Style guide: Typography.5 Lists
 
 ul,
 ol {
-  padding-left: 1.1 * $base-spacing;
+  padding-left: ($base-spacing + $small-spacing);
 
   ul {
     list-style-type: disc;
